Finished Responsivity for Homepage and Footer + Fixed a Navbar form field overflow

--- a/src/css/global/_config.scss
+++ b/src/css/global/_config.scss
@@ -6,6 +6,8 @@
 // Layout
 $default-width: 1300px;
 $sm-width: 768px;
+$esm-width: 425px;
+
 $card-height: 250px;
 
 // Typography
