--- a/src/css/global/_navbar.scss
+++ b/src/css/global/_navbar.scss
@@ -47,7 +47,7 @@
 
 // Search
 .nav-input {
-	padding: 1rem 2rem;
+	padding: 1rem 1.25rem;
 	border: 1px solid #ccc;
 	border-right: none;
 	outline: none;
